@@ -2,6 +2,7 @@
 
 * Update X resources class to allow use of terms other than XTerm
 * Apply patch from Harald Weidner to stop error messages in Debian Etch
+* Add in key shortcut (alt-h) to toggle history window
 
 2008-11-28 Duncan Ferguson <duncan_ferguson@user.sf.net> - v3.21-1
 
